replace desk icon

--- a/templates/page-properties-listing.twig
+++ b/templates/page-properties-listing.twig
@@ -145,7 +145,7 @@
                                             <div class="details">
                                                 <div class="d-flex justify-content-between">
                                                     <ul class="property-residential-details">
-                                                        <li><i class="fa-regular fa-lamp-desk"></i> {{ property.availability_size_desks_from ~ ' - ' ~ property.availability_size_desks_to }}</li>
+                                                        <li><i class="fa-light fa-desktop"></i> {{ property.availability_size_desks_from ~ ' - ' ~ property.availability_size_desks_to }}</li>
                                                     </ul>
                                                 </div>
                                                 <div class="property-item-subtitle">{{ property.title }}</div>
