--- a/templates/single-property.twig
+++ b/templates/single-property.twig
@@ -40,8 +40,9 @@
                                             {% endif %}
                                             <span class="price-qualifier">Asking Price</span>
                                         </div>
-                                    </div><ul class="property-residential-details">
-                                        <li><i class="fa-regular fa-lamp-desk"></i> {{ post.availability_size_desks_from ~ ' - ' ~ post.availability_size_desks_to }}</li>
+                                    </div>
+                                    <ul class="property-residential-details">
+                                        <li><i class="fa-light fa-desktop"></i> {{ post.availability_size_desks_from ~ ' - ' ~ post.availability_size_desks_to }}</li>
                                     </ul>
 
                                 </div><!-- .summary -->
