property contact fom and notifictions

--- a/components/popups/branch-contact.twig
+++ b/components/popups/branch-contact.twig
@@ -1,8 +1,7 @@
 <div id="branch-contact-popup" style="max-width:600px">
-    <h3 class="mb-3">Contact Stirling Ackroyd {{ branch_title }}</h3>
+    <h3 class="mb-3">Contact Stirling Ackroyd for {{ property_title }}</h3>
     <form data-form="branchContact">
         <input type="hidden" name="id" value="{{ id }}">
-        <input type="hidden" name="department" value="{{ department }}">
 
         <div class="row">
             <div class="col-xl-6">
