--- a/templates/emails/branch-contact-user.twig
+++ b/templates/emails/branch-contact-user.twig
@@ -37,9 +37,7 @@
                                                 <tr style="color: gray;">
                                                     <td>Asking price {{ body.property_price }}</td>
                                                     <td style="padding-left:5px;padding-right:5px;">|</td>
-                                                    <td>{{ body.property_beds}} bed</td>
-                                                    <td style="padding-left:5px;padding-right:5px;">|</td>
-                                                    <td>{{ body.property_department ? 'residential-sales' ? 'For Sale' : 'To Let' }}</td>
+                                                    <td>Desks {{ body.property.availability_size_desks_from ~ '-' ~ body.property.availability_size_desks_to}}</td>
                                                 </tr>
                                             </table>
                                         </td>
@@ -58,21 +56,8 @@
                             </div>
                         </td>
                     </tr>
-                    <tr><td><hr style="border: 0;border-top: 1px solid silver;"></td></tr>
                 {% endif %}
-                <tr>
-                    <td>
-                        <h3>Contact Us</h3>
 
-                        <div style="padding: 15px;border: 1px solid silver;">
-                            <div style="text-align: center;">
-                                <img src="{{ body.branch.thumbnail }}" style="max-width: 300px;" width="300">
-                            </div>
-                            <h2>{{ body.branch.title }}</h2>
-                            <p style="font-size: 20px;">{{ body.branch.branch_address }}<br>{{ body.branch_phone }}</p>
-                        </div>
-                    </td>
-                </tr>
             </table>
         </td>
     </tr>
