--- a/templates/page-properties-listing.twig
+++ b/templates/page-properties-listing.twig
@@ -150,7 +150,7 @@
                                             <div class="details">
                                                 <div class="d-flex justify-content-between">
                                                     <ul class="property-residential-details">
-                                                        <li><i class="fa-light fa-desktop"></i> {{ property.availability_size_desks_from ~ ' - ' ~ property.availability_size_desks_to }}</li>
+                                                        <li><i class="fa-light fa-desktop"></i> {{ property.availability_size_desks_from ~ ' - ' ~ property.availability_size_desks_to }} desks</li>
                                                     </ul>
                                                 </div>
                                                 <div class="property-item-subtitle">{{ property.title }}</div>
