--- a/templates/single-property.twig
+++ b/templates/single-property.twig
@@ -42,7 +42,7 @@
                                         </div>
                                     </div>
                                     <ul class="property-residential-details">
-                                        <li><i class="fa-light fa-desktop"></i> {{ post.availability_size_desks_from ~ ' - ' ~ post.availability_size_desks_to }}</li>
+                                        <li><i class="fa-light fa-desktop"></i> {{ post.availability_size_desks_from ~ ' - ' ~ post.availability_size_desks_to }} desks</li>
                                     </ul>
 
                                 </div><!-- .summary -->
