--- a/src/sass/essential/pages/_properties-search.scss
+++ b/src/sass/essential/pages/_properties-search.scss
@@ -14,7 +14,7 @@
             margin: 0;
             font-size: 22px;
             text-transform: uppercase;
-            font-weight: normal;
+            font-weight: 300;
 
             .address-keyword-text{
                 color: $support-color2;
