--- a/templates/emails/branch-contact-user.twig
+++ b/templates/emails/branch-contact-user.twig
@@ -35,9 +35,7 @@
                                         <td>
                                             <table>
                                                 <tr style="color: gray;">
-                                                    <td>Asking price {{ body.property_price }}</td>
-                                                    <td style="padding-left:5px;padding-right:5px;">|</td>
-                                                    <td>Desks {{ body.property.availability_size_desks_from ~ '-' ~ body.property.availability_size_desks_to}}</td>
+                                                    <td>{{ body.property.availability_size_desks_from ~ '-' ~ body.property.availability_size_desks_to}} desks</td>
                                                 </tr>
                                             </table>
                                         </td>
