hide price from the listing card

--- a/templates/page-properties-listing.twig
+++ b/templates/page-properties-listing.twig
@@ -154,11 +154,11 @@
                                                     </ul>
                                                 </div>
                                                 <div class="property-item-subtitle">{{ property.title }}</div>
-                                                <h6><a href="{{ property.link }}">{{ address }}</a></h6>
-                                                <div class="price">
+                                                <h6 class="mb-0"><a href="{{ property.link }}">{{ address }}</a></h6>
+                                                {#<div class="price">
                                                     £{{ property.price_desk_per_month }}
                                                     <span class="price-qualifier">Asking Price</span>
-                                                </div>
+                                                </div>#}
                                                 <div class="property-branch-details">
                                                     <div>
                                                         {% if options.property_phone %}
