mobile Amenities - 2 columns

--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -287,6 +287,16 @@
     }
 }
 
+.single-property{
+    .section-property-detail-content-tabs{
+        .property-detail-description-wrapper{
+            ul{
+                columns: 2;
+            }
+        }
+    }
+}
+
 @media screen and (min-width: 992px) {
     .section-properties{
         .property-search-expandable{
